# simutrace

./: .gitignore  CHANGELOG  CMakeLists.txt  KNOWNISSUES  Makefile  README.md  SimuTrace.sln  make-doc.bat  make-doc.sh
samples/csharp.memreplay/: AssemblyInfo.cs  CMakeLists.txt  CSharp.MemReplay.csproj.in  Program.cs  RamBitmap.cs  RamMap.cs  Replay.cs
samples/csharp.memreplay/Gui/: MainForm.Designer.cs  MainForm.cs  MainForm.resx  RamBrowser.cs  ReplayForm.Designer.cs  ReplayForm.cs  ReplayForm.resx  ScreenForm.Designer.cs  ScreenForm.cs
samples/csharp.simple/: AssemblyInfo.cs  CMakeLists.txt  CSharp.Simple.csproj-template  CSharp.Simple.csproj.in  Program.cs
samples/parallel/: CMakeLists.txt  main.cpp
samples/simple/: CMakeLists.txt  main.cpp
samples/simpleclient/: Makefile  flags.mak  main.cpp  packages.config  simpleclient.vcxproj
samples/storemon/: CMakeLists.txt  Makefile  flags.mak  gcc_defines.h  main.cpp  storemon-Debug.vgdbsettings.template  storemon-Release.vgdbsettings.template  storemon.vcxproj
setups/debian/: CMakeLists.txt  control  libsimutrace-dev.install  libsimutrace.install  libsimutraceX-dev.install  libsimutraceX.install  rules  simutrace-server.install
setups/osc/: CMakeLists.txt  simutrace.spec.in
setups/tarball/: CMakeLists.txt
setups/windows/: CMakeLists.txt  components-core.wxs  components-devres-apidocs-shortcuts.wxs  components-devres-apiheaders.wxs  components-simutrace-net.wxs  config.wxi.in  main.wxs  winmsi.wixproj.in  wizard-alreadyinstalled.wxs  wizard-browse.wxs  wizard-env.wxs  wizard-error.wxs  wizard-fatalerror.wxs  wizard-featureselect.wxs  wizard-filesinuse.wxs  wizard-finished.wxs  wizard-progress.wxs  wizard-userexit.wxs  wizard-welcome.wxs  wizard.wxs
simutrace/bindings/csharp/: AssemblyInfo.cs  CMakeLists.txt  Native.cs  SimuTrace.CSharp.csproj-template
simutrace/bindings/dotnet/: AssemblyInfo.cs.in  CMakeLists.txt  Native.cs  NativeMethods.cs  NativeMethodsX.cs  NativeX.cs  SimuTrace.Net.Interop.csproj.in  SimuTrace.Net.Interop.snk
simutrace/documentation/: CMakeLists.txt  PublicApi.doxyfile  PublicApi.doxyfile.in
simutrace/documentation/theme/: footer.html  header.html  navtree.css  resize.js  theme.css
simutrace/documentation/theme/search/: search.css
simutrace/include/: SimuBase.h  SimuBaseLibraries.h  SimuBaseTypes.h  SimuPlatform.h  SimuStor.h  SimuStorTypes.h  SimuTrace.h  SimuTraceEntryTypes.h  SimuTraceInternal.h  SimuTraceTypes.h  SimuTraceX.h  SimuTraceXTypes.h  Version.h  Version.h.in
simutrace/include/simubase/: ClientPort.h  Clock.h  Compression.h  ConditionVariable.h  Configuration.h  CriticalSection.h  Directory.h  Environment.h  Event.h  Exceptions.h  FastDelegate.h  File.h  FileBackedMemorySegment.h  FileLogAppender.h  Hash.h  IdAllocator.h  Interlocked.h  LockRegion.h  LogAppender.h  LogCategory.h  LogEvent.h  LogLayout.h  LogPriority.h  Logging.h  MemoryHelpers.h  MemorySegment.h  OstreamLogAppender.h  PatternLogLayout.h  Port.h  PrivateMemorySegment.h  ProfileEntry.h  Profiler.h  ReaderWriterLock.h  ReaderWriterLockRegion.h  RpcInterface.h  SafeHandle.h  ScopedTimer.h  (+11 more)
simutrace/libsimubase/: CMakeLists.txt  Channel.cpp  Channel.h  ChannelProvider.cpp  ChannelProvider.h  ClientPort.cpp  Clock.cpp  Compression.cpp  ConditionVariable.cpp  Configuration.cpp  CriticalSection.cpp  Directory.cpp  Environment.cpp  Event.cpp  Exceptions.cpp  File.cpp  FileBackedMemorySegment.cpp  FileLogAppender.cpp  Hash.cpp  Interlocked.cpp  LocalChannel.cpp  LocalChannel.h  LogAppender.cpp  LogCategory.cpp  LogEvent.cpp  LogPriority.cpp  Makefile  MemoryHelpers.cpp  MemorySegment.cpp  OstreamLogAppender.cpp  PatternLogLayout.cpp  Port.cpp  PrivateMemorySegment.cpp  Profiler.cpp  ReaderWriterLock.cpp  RpcInterface.cpp  SafeHandle.cpp  ServerPort.cpp  SharedMemorySegment.cpp  SimpleLogLayout.cpp  (+10 more)
simutrace/libsimubase/farmhash/: FarmHash.cpp
simutrace/libsimubase/lzma/: LzmaEnc.c  Types.h
simutrace/libsimubase/murmurhash3/: MurmurHash3.h
simutrace/libsimustor/: CMakeLists.txt  DataPool.cpp  Makefile  Session.cpp  SessionManager.cpp  Store.cpp  Stream.cpp  StreamBuffer.cpp  flags.mak  libsimustor.vcxproj  libsimustor.vcxproj.filters  main.cpp
simutrace/libsimutrace/: CMakeLists.txt  ClientObject.h  ClientSession.cpp  ClientSession.h  ClientSessionManager.cpp  ClientSessionManager.h  ClientStore.cpp  ClientStore.h  ClientStream.cpp  ClientStream.h  DynamicStream.cpp  DynamicStream.h  Makefile  SimuTrace.cpp  StaticStream.cpp  StaticStream.h  flags.mak  libsimutrace.rc.in  libsimutrace.vcxproj  libsimutrace.vcxproj.filters  main.cpp
simutrace/libsimutraceX/: CMakeLists.txt  SimuTraceX.cpp  StreamMultiplexer.cpp  StreamMultiplexer.h  libsimutraceX.rc.in  main.cpp
simutrace/storageserver/: CMakeLists.txt  Makefile  ScratchSegment.cpp  ScratchSegment.h  ServerSession.cpp  ServerSession.h  ServerSessionManager.cpp  ServerSessionManager.h  ServerSessionWorker.cpp  ServerSessionWorker.h  ServerStore.cpp  ServerStore.h  ServerStoreManager.cpp  ServerStoreManager.h  ServerStream.cpp  ServerStream.h  ServerStreamBuffer.cpp  ServerStreamBuffer.h  StorageServer.cpp  StorageServer.h  StorageServerOptions.h  StreamEncoder.h  WorkItem.h  WorkItemBase.h  WorkQueue.cpp  WorkQueue.h  WorkerPool.cpp  WorkerPool.h  WorkerStreamWait.cpp  WorkerStreamWait.h  flags.mak  main.cpp  simustore.cfg  simustore.cfg-template  simustore.cfg.in  simustore.rc.in  storageserver.vcxproj  storageserver.vcxproj.filters
simutrace/storageserver/simtrace/: FileHeader.h  ProfileSimtrace3GenericEncoder.h  Simtrace3Encoder.cpp  Simtrace3Encoder.h  Simtrace3Format.h  Simtrace3Frame.cpp  Simtrace3Frame.h  Simtrace3GenericEncoder.cpp  Simtrace3GenericEncoder.h  Simtrace3MemoryEncoder.h  Simtrace3Store.cpp  Simtrace3Store.h  SimtraceStoreProvider.cpp  SimtraceStoreProvider.h
simutrace/storageserver/simtrace/VPC4/: CompoundPredictor.h  CyclePredictor.h  FiniteContextMethodHistory.h  FiniteContextMethodPredictor.h  IpPredictor.h  KeyedLastNValuePredictor.h  Predictor.h  ValuePredictor.h
tests/tst_appendclose/: CMakeLists.txt  main.cpp
(+9 files in other folders)
